<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="myseneca.ca.restaurantshunter.RestaurantListActivity"
    tools:showIn="@layout/activity_restaurant_list">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@android:id/list"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.80" />
        <TextView
            android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/list_is_empty"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="0.80"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="#000000"
            android:layout_alignParentEnd="true"
            >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/btn_rewards"
                android:drawableLeft="@drawable/rewards"
                android:background="#393a3b"
                android:id="@+id/btn_rewards"
                android:textColor="#ffffff"
                android:layout_alignParentLeft="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/btn_email"
                android:drawableLeft="@drawable/email"
                android:background="#393a3b"
                android:id="@+id/btn_email"
                android:textColor="#ffffff"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
