<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="myseneca.ca.restaurantshunter.CommentActivity"
    tools:showIn="@layout/activity_comment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/Comm_ResName"
        android:id="@+id/CommResName"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="#631313"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/comm_ResPhoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="3dp"
        android:layout_below="@+id/CommResName"
        android:text="@string/Comm_Rates"
        android:id="@+id/comm_str_name" />

    <RatingBar
        android:layout_width="160dp"
        android:layout_height="32dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/comm_str_name"
        android:id="@+id/comm_rates"
        style="@style/CustomRatingBarComm"
        android:numStars="5"
        android:stepSize="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/comm_rates"
        android:text="@string/comment_txtview_comment"
        android:id="@+id/comm_comm_str" />

    <EditText
        android:id="@+id/comm_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/comm_comm_str"
        android:singleLine="false"
        android:inputType="textMultiLine"
        android:scrollbars="horizontal"
        android:gravity="top|left"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/comm_edit_text_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/comm_content"
        android:text="@string/comment_txtview_photos"
        android:id="@+id/comm_str_addphoto" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/comm_str_addphoto">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/photo1"
                android:layout_column="0"
                android:background="@drawable/add_image2" />

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/photo2"
                android:layout_column="1"
                android:contextClickable="true"
                android:background="@drawable/add_image2" />

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/photo3"
                android:layout_column="2"
                android:background="@drawable/add_image2" />

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/photo4"
                android:layout_column="3"
                android:background="@drawable/add_image2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/photo5"
                android:layout_column="0"
                android:background="@drawable/add_image2" />

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/photo6"
                android:layout_column="1"
                android:background="@drawable/add_image2" />

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/photo7"
                android:layout_column="2"
                android:focusable="true"
                android:background="@drawable/add_image2" />

            <ImageButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:id="@+id/photo8"
                android:layout_column="3"
                android:background="@drawable/add_image2" />
        </TableRow>

    </TableLayout>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="25dp"
        android:id="@+id/comm_ResPhoto"
        android:layout_alignBottom="@+id/comm_rates"
        android:layout_alignParentEnd="true"
        android:background="@drawable/add_image2"
        android:contentDescription="@string/comment_imgbtn_default_photo" />

</RelativeLayout>
</ScrollView>